[package]
name = "array-deque"
version = "0.1.0"
edition = "2024"
authors = ["Tobiasz Chmielewski <0x7030676e31@proton.me>"]
description = "A fixed-capacity circular buffer (ring buffer) implementation with efficient operations at both ends"
license = "MIT"
repository = "https://0x7030676e31/array-deque"
homepage = "https://0x7030676e31/array-deque"
documentation = "https://docs.rs/array-deque"
readme = "README.md"
keywords = [
    "deque",
    "circular-buffer",
    "ring-buffer",
    "data-structures",
    "fixed-capacity",
]
categories = ["data-structures"]
exclude = ["target/", ".git/", ".vscode/"]

[dependencies]
serde = { version = "1.0.219", optional = true }

[dev-dependencies]
serde_json = "1.0.140"

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
