[package]
name = "array-deque"
version = "0.3.1"
edition = "2024"
authors = ["Tobiasz Chmielewski <0x7030676e31@proton.me>"]
description = "Fixed-capacity circular buffer implementations: heap-allocated ArrayDeque and stack-allocated StackArrayDeque. Efficient O(1) operations, no_std support."
license = "MIT"
repository = "https://github.com/0x7030676e31/array-deque"
homepage = "https://github.com/0x7030676e31/array-deque"
documentation = "https://docs.rs/array-deque"
readme = "README.md"
keywords = [
    "deque",
    "circular-buffer",
    "ring-buffer",
    "data-structures",
    "fixed-capacity",
]
categories = ["data-structures", "no-std"]
exclude = ["target/", ".git/", ".vscode/"]

[dependencies]
serde = { version = "1.0.219", optional = true }

[dev-dependencies]
serde_json = "1.0.140"

[features]
default = ["std"]
serde = ["dep:serde"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
